Downscale train images

--- a/train_hazmats.ipynb
+++ b/train_hazmats.ipynb
@@ -29,6 +29,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from glob import glob\n",
+    "#rescale images if needed\n",
+    "# WARNING: Only works for quadratic images currently\n",
+    "basewidth = 2291\n",
+    "for imgfile in glob(os.path.join(os.getcwd(), 'images/train', '*.png')):\n",
+    "    img = Image.open(imgfile)\n",
+    "    img = img.resize((basewidth, basewidth), Image.LANCZOS)\n",
+    "    img.save(imgfile)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "tags": []
@@ -141,17 +157,27 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Successfully created the TFRecords: /home/oskar/workspace/cjt_hazmat/hazmat/annotations/train.record\n"
+     "output_type": "stream",
+     "text": [
+      "Successfully created the TFRecords: /home/oskar/workspace/cjt_hazmat/hazmat/annotations/train.record\n"
+     ]
     },
     {
-     "output_type": "error",
      "ename": "SystemExit",
      "evalue": "",
+     "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/oskar/workspace/cjt_hazmat/venv/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3339: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -183,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
